[package]
name = "yamldb"
version = "0.10.0"
edition = "2024"
description = "A lightweight YAML file-based database with CLI and ODBC support"
license = "MIT"
repository = "https://github.com/markchenim/yamldb"
readme = "README.md"
keywords = ["yaml", "database", "cli", "odbc"]
categories = ["command-line-utilities", "database"]

[lib]
name = "yamldb"
crate-type = ["lib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
lazy_static = "1"
